discussion/kv_engine/126198/126198_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Introduce StatCollector interface

StatCollector is an interface which may be implemented by statistics
backends. This is done in preparation for exposing stats to Prometheus.

The existing stat formatting logic has been encapsulated in
CBStatCollector. The the add_stat/add_casted_stat interface has been
maintained, and simply calls into CBStatCollector.

Currently, no stats-adding code directly use the StatCollector
interface. For now, add_casted_stat remains as a stub which internally
uses CBStatCollector. With this, stat groups can be migrated one at a
time.

Change-Id: Ibb9482aeca39bd29bdab2c508ea3677e7319ef6f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-04-20 13:12:43.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 13:34:55.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27625/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\statwriter.h(159): error C2535: "void StatCollector::addScalar(std::string_view,uint64_t)": member function already defined or declared ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27625/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1795/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/statwriter.h:159:10: error: class member cannot be redeclared [clang-diagnostic-error]
    void addScalar(std::string_view k, size_t v) {
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/statwriter.h:137:18: note: previous declaration is here
    virtual void addScalar(std::string_view k, uint64_t v) = 0;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/statwriter.h:163:10: error: class member cannot be redeclared [clang-diagnostic-error]
    void addScalar(std::string_view k, ssize_t v) {
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/statwriter.h:136:18: note: previous declaration is here
    virtual void addScalar(std::string_view k, int64_t v) = 0;
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1795/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/statwriter.h:159:10:
error: class member cannot be redeclared [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1795/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23624/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/statwriter.h:159:10:
error: class member cannot be redeclared
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23624/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3291/ : FAILURE

Compile error at [2020-04-20T13:15:40.088Z] ../kv_engine/engines/ep/src/statwriter.h:159:10:
error: ?void StatCollector::addScalar(std::string_view, size_t)? cannot be overloaded
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3291/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3212/ : FAILURE

Compile error at [2020-04-20T13:15:14.084Z] ../kv_engine/engines/ep/src/statwriter.h:159:10:
error: ?void StatCollector::addScalar(std::string_view, size_t)? cannot be overloaded
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3212/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3230/ : FAILURE

Compile error at [2020-04-20T13:18:07.568Z] ../kv_engine/engines/ep/src/statwriter.h:159:10:
error: ?void StatCollector::addScalar(std::string_view, size_t)? cannot be overloaded
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3230/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11080/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2274/ : FAILURE

Failure of a CTest test [2020-04-20T13:26:03.475Z] 243/398 Test #243: ep_testsuite_dcp.value_eviction.comp_passive ................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2274/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/314/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
